# js_cc_addons

./: .bazelrc  .gitmodules  BUILD.bazel  README.md  WORKSPACE.bazel  addon.cc  rules_nodejs.patch  test.cc  testjs.js  testjs.ts
node/: BUILD.bazel
node/cppgc/: common.h
pg/: BUILD.bazel  greeter.proto  test.cc  test.js
simple/: BUILD.bazel  cc.cc  python.py
