load("@aspect_rules_js//js:defs.bzl", "js_binary")

cc_binary(
    name = "addon",
    srcs = [
        "addon.cc",
        # "@nodejs//:nodejs_headers",
    ],
    copts = [
        # "-I@nodejs//:nodejs_head",
        "-std=c++17",
    ],
    includes = [
        # "@nodejs//:nodejs_headers",
    ],
    linkshared = 1,
    deps = [
        "@nodejs//:nodejs_lib",
        "@pybind11//:pybind11_embed",
    ],
)

genrule(
    name = "addon_node",
    srcs = [":addon"],
    outs = ["addon.node"],
    cmd = "cp $(location :addon) $@",
)

js_binary(
    name = "test",
    data = [
        ":addon_node",  # Reference the native addon target
    ],
    entry_point = "testjs.ts",
    # Include any necessary dependencies, flags, etc.
)

cc_binary(
    name = "ccbin",
    srcs = [
        "test.cc",
    ],
    copts = [
        "-std=c++17",
    ],
    data = [
        "testjs.js",
    ],
    deps = [
        "@nodejs//:nodejs_lib",
        "@pybind11//:pybind11_embed",
    ],
)
